Fix screen overflow

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -15,4 +15,5 @@ code {
 .App {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
