--- a/app/src/pages/Circles/Circles.module.scss
+++ b/app/src/pages/Circles/Circles.module.scss
@@ -2,7 +2,7 @@
     background-size: cover !important;
     background-repeat: no-repeat;
     
-    width: 100%;
+    width: 100vw;
     height: 500px;
     max-height: 60%;
     .lead,
